[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = specsim
description = Quick simulations of fiber spectrograph response
long_description = Quick simulations of fiber spectrograph response
author = David Kirkby
author_email = dkirkby@uci.edu
license = BSD
url = https://github.com/desihub/specsim
edit_on_github = True
github_project = desihub/specsim

[entry_points]
quickspecsim = specsim.driver:main
