[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[ah_bootstrap]
auto_use = True

[metadata]
package_name = specsim
description = Quick simulations of fiber spectrograph response
long_description = Quick simulations of fiber spectrograph response
author = Specsim Developers
author_email = dkirkby@uci.edu
license = BSD
url = https://github.com/desihub/specsim
edit_on_github = True
github_project = desihub/specsim
install_requires = astropy scipy pyyaml speclite
# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
# e.g., 0.12.dev or 0.12
version = 0.18

# [options.entry_points]
# console_scripts =
#     quickspecsim = specsim.quickspecsim:main
#     quickfiberloss = specsim.quickfiberloss:main
#     fitgalsim = specsim.fitgalsim:main
[entry_points]
quickspecsim = specsim.quickspecsim:main
quickfiberloss = specsim.quickfiberloss:main
fitgalsim = specsim.fitgalsim:main

[options.extras_require]
docs =
    sphinx-astropy
    desiutil @ https://github.com/desihub/desiutil/archive/refs/tags/3.4.2.tar.gz
    desimodel @ https://github.com/desihub/desimodel/archive/refs/tags/0.19.1.tar.gz

[tool:pytest]
testpaths = "specsim" "docs"
norecursedirs = build docs/_build
astropy_header = true
doctest_plus = enabled
text_file_format = rst
# addopts = --doctest-glob=*.rst
addopts = --doctest-rst

[coverage:run]
relative_files = True
omit =
    specsim/_astropy_init*
    specsim/conftest.py
    specsim/*setup_package*
    specsim/tests/*
    specsim/*/tests/*
    specsim/extern/*
    specsim/version*
    */specsim/_astropy_init*
    */specsim/conftest.py
    */specsim/*setup_package*
    */specsim/tests/*
    */specsim/*/tests/*
    */specsim/extern/*
    */specsim/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[pep8]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[flake8]
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
